--- a/index.html
+++ b/index.html
@@ -5,8 +5,23 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>professional-portfolio</title>
+    <link rel="stylesheet" href="style.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Poppins&display=swap" rel="stylesheet">
 </head>
 <body>
-    
+    <section id="header">
+        <div class="header-part">
+            <h1>Welcome to</h1>
+            <h1> <span class="text-color">Adnan Ahmed</span> website!</h1>
+            <h2> Full stack webdevelopment with Javascript</h2>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Labore explicabo velit amet qui accusamus quidem iure exercitationem eligendi impedit aperiam quod nobis odit dolor excepturi nihil ipsam tempora, sapiente suscipit voluptas repellat quam modi ab voluptatibus. Dolores non et est doloremque tempore ipsa facilis vero illum in omnis ex saepe officiis tempora totam animi molestiae laudantium itaque necessitatibus, voluptatum hic sunt adipisci facere excepturi. Eligendi veritatis id animi blanditiis sit.</p>
+            <a class="button" href="https://facebook.com">Hire Me </a>
+        </div>
+        <div class="header-part">
+            <img src="images/my-pic.png" alt="">
+        </div>
+    </section>
 </body>
 </html>
