--- a/index.html
+++ b/index.html
@@ -23,5 +23,16 @@
             <img src="images/my-pic.png" alt="">
         </div>
     </section>
+    <section id="drear-area">
+        <div class="dream-part">
+            <img src="images/my-bg3.png" alt="">
+        </div>
+        <div class="dream-part">
+            <h1>I have a Dream</h1>
+            <h2>Become a Web Developer</h2>
+            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Possimus harum inventore amet ut sapiente. Itaque mollitia at reiciendis cum ab?</p>
+            <a class="button" href="https://google.com">Resume Download</a>
+        </div>
+    </section>
 </body>
 </html>
