--- a/index.html
+++ b/index.html
@@ -34,5 +34,21 @@
             <a class="button" href="https://google.com">Resume Download</a>
         </div>
     </section>
+    <section id="ex-area">
+        <h1>Experiences</h1>
+        <div class="ex-area-part">
+            <div id="full-stack">
+                <h2>Full stack web development</h2>
+                <h3>Your level pro, when you are 2022</h3>
+                <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Porro cumque totam ea cum officiis voluptates dolorum eaque architecto amet officia?</p>
+            </div>
+            <div id="baby-web">
+                <h2> Baby web developer</h2>
+                <h3>Learn with js : You are pro </h3>
+                <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Porro cumque totam ea cum officiis voluptates dolorum eaque architecto amet officia?</p>
+            </div>
+        </div>
+        
+    </section>
 </body>
 </html>
