--- a/index.html
+++ b/index.html
@@ -50,5 +50,9 @@
         </div>
         
     </section>
+
+    <footer>
+        <p>professional-portfolio website &COPY; learn with js</p>
+    </footer>
 </body>
 </html>
